<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.ritara.svustudent.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/login" >
        <action
            android:id="@+id/action_nav_home_self"
            app:destination="@id/nav_home" />
    </fragment>

    <fragment
        android:id="@+id/nav_gallery"
        android:name="com.ritara.svustudent.ui.gallery.GalleryFragment"
        android:label="@string/menu_gallery"
        tools:layout="@layout/fragment_gallery" />

    <fragment
    android:id="@+id/nav_slideshow"
    android:name="com.ritara.svustudent.ui.slideshow.SlideshowFragment"
    android:label="@string/menu_slideshow"
    tools:layout="@layout/fragment_slideshow" />

    <fragment
        android:id="@+id/nav_tools"
        android:name="com.ritara.svustudent.ui.tools.ToolsFragment"
        android:label="@string/menu_tools"
        tools:layout="@layout/fragment_tools" />

    <fragment
        android:id="@+id/nav_share"
        android:name="com.ritara.svustudent.ui"
        android:label="@string/menu_share"
        tools:layout="@layout/fragment_notify" />

    <fragment
        android:id="@+id/nav_send"
        android:name="com.ritara.svustudent.ui.send.SendFragment"
        android:label="@string/menu_send"
        tools:layout="@layout/fragment_shopping" />


    <fragment
        android:id="@+id/orders"
        android:name="com.ritara.svustudent.ui.orders.OrdersFragment"
        android:label="@string/menu_slideshow"
        tools:layout="@layout/fragment_orders" />

    <fragment
        android:id="@+id/account"
        android:name="com.ritara.svustudent.ui.account.AccountFragment"
        android:label="@string/account"
        tools:layout="@layout/fragment_account" />

    <fragment
        android:id="@+id/help"
        android:name="com.ritara.svustudent.ui.help.HelpFragment"
        android:label="@string/help"
        tools:layout="@layout/fragment_help" />

    <fragment
        android:id="@+id/shopping"
        android:name="com.ritara.svustudent.ui.shopping_cart.ShoppingFragment"
        android:label="@string/menu_send"
        tools:layout="@layout/fragment_shopping" />
</navigation>