<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="330dp"
    android:layout_height="420dp"
    android:orientation="vertical"
    android:padding="5dp"
    android:weightSum="100">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="130dp"
        android:background="#F69E27">


        <ImageView
            android:id="@+id/loader"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_centerInParent="true"
            android:layout_centerVertical="true"
            android:src="@drawable/ic_cursor">

        </ImageView>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/loader"
            android:layout_centerInParent="true"
            android:text="Approval Pending"
            android:textAlignment="center"
            android:textColor="#fff"
            android:textSize="25dp"
            android:textStyle="bold" />


    </RelativeLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="15dp"
        android:gravity="center"
        android:singleLine="false"
        android:text="@string/first_approval"
        android:textSize="18dp"></TextView>


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="15dp"
        android:gravity="center"
        android:singleLine="false"
        android:text="@string/approval"
        android:textSize="18dp"></TextView>


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="15dp"
        android:gravity="center"
        android:singleLine="false"
        android:text="@string/three_approval"
        android:textSize="18dp"></TextView>


    <TextView
        android:id="@+id/ok"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="Ok"
        android:textColor="#4B3FB5" />


</LinearLayout>