<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/white"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="20dp">

        <TextView
            android:id="@+id/profile_url"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Profile URL" />

        <EditText
            android:id="@+id/et_profile_url"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="https://svu.edu.in//s/23456"
            android:layout_marginTop="10dp"/>

        <ImageView
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:src="@drawable/ic_edit"
            android:layout_alignParentRight="true">

        </ImageView>

    </RelativeLayout>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="20dp">

        <TextView
            android:id="@+id/email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Email address" />

        <EditText
            android:id="@+id/et_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="shivani@ritaraapps.com"
            android:layout_marginTop="10dp"/>

        <ImageView
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:src="@drawable/ic_edit"
            android:layout_alignParentRight="true">

        </ImageView>

    </RelativeLayout>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="20dp">

        <TextView
            android:id="@+id/mobile_no"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Mobile Number" />

        <EditText
            android:id="@+id/et_mobile"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="8766318889"
            android:layout_marginTop="10dp"/>

        <ImageView
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:src="@drawable/ic_edit"
            android:layout_alignParentRight="true">

        </ImageView>

    </RelativeLayout>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="20dp">

        <TextView
            android:id="@+id/password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Password" />

        <EditText
            android:id="@+id/et_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:text="*****"
            android:layout_marginTop="10dp"/>

        <ImageView
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:src="@drawable/ic_edit"
            android:layout_alignParentRight="true">

        </ImageView>

    </RelativeLayout>


    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="25dp"
        android:background="@color/colorPrimaryDark"
        android:text="LOGOUT"
        android:textSize="18dp"
        android:textColor="@color/white">

    </Button>

    <TextView
        android:id="@+id/terms"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/terms"
        android:textColor="@color/Dark_Blue"
        android:textSize="20dp"
        android:layout_marginTop="15dp"
        android:layout_marginLeft="15dp">

    </TextView>

    <TextView
        android:id="@+id/privacy"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/privacy"
        android:textColor="@color/Dark_Blue"
        android:textSize="20dp"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="15dp">

    </TextView>

    <TextView
        android:id="@+id/policy"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/policy"
        android:textColor="@color/Dark_Blue"
        android:textSize="20dp"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="15dp">

    </TextView>


</LinearLayout>